some access restrictions for delco

--- a/src/main/webapp/i18n/en/team.json
+++ b/src/main/webapp/i18n/en/team.json
@@ -16,6 +16,8 @@
                 "title": "Team"
             },
             "name": "Name",
+            "agresso": "Agresso",
+            "projectType": "Project Type",
             "deliveryCoordinator": "Delivery Coordinator",
             "collaborator": "Collaborator",
             "project": "Project"
