costomizeing views and adding id_tbp column to team entity

--- a/src/main/webapp/i18n/en/collaborator.json
+++ b/src/main/webapp/i18n/en/collaborator.json
@@ -4,7 +4,7 @@
             "home": {
                 "title": "Collaborators",
                 "createLabel": "Create a new Collaborator",
-                "createOrEditLabel": "Create or edit a Collaborator"
+                "createOrEditLabel": "Edit a Collaborator"
             },
             "created": "A new Collaborator is created with identifier {{ param }}",
             "updated": "A Collaborator is updated with identifier {{ param }}",
