--- a/src/main/webapp/i18n/fr/collaborator.json
+++ b/src/main/webapp/i18n/fr/collaborator.json
@@ -2,25 +2,25 @@
     "imputationSqliApp": {
         "collaborator": {
             "home": {
-                "title": "Collaborators",
-                "createLabel": "Créer un nouveau Collaborator",
-                "createOrEditLabel": "Créer ou éditer un Collaborator"
+                "title": "Collaborateurs",
+                "createLabel": "Créer un nouveau Collaborateur",
+                "createOrEditLabel": "Modifier un Collaborateur"
             },
-            "created": "Un nouveau Collaborator a été créé avec l'identifiant {{ param }}",
-            "updated": "Le Collaborator avec l'identifiant {{ param }} a été mis à jour",
-            "deleted": "Le Collaborator avec l'identifiant {{ param }} a été supprimé",
+            "created": "Un nouveau Collaborateur a été créé avec l'identifiant {{ param }}",
+            "updated": "Le Collaborateur avec l'identifiant {{ param }} a été mis à jour",
+            "deleted": "Le Collaborateur avec l'identifiant {{ param }} a été supprimé",
             "delete": {
-                "question": "Etes-vous certain de vouloir supprimer le Collaborator {{ id }} ?"
+                "question": "Etes-vous certain de vouloir supprimer le Collaborateur {{ id }} ?"
             },
             "detail": {
-                "title": "Collaborator"
+                "title": "Collaborateur"
             },
-            "firstname": "Firstname",
-            "lastname": "Lastname",
+            "firstname": "Prenom",
+            "lastname": "Nom",
             "email": "Email",
-            "team": "Team",
-            "monthlyImputation": "Monthly Imputation",
-            "activity": "Activity"
+            "team": "Équipe",
+            "monthlyImputation": "Imputation Mensuelle",
+            "activity": "Activité"
         }
     }
 }
