--- a/src/main/webapp/i18n/en/activity.json
+++ b/src/main/webapp/i18n/en/activity.json
@@ -4,7 +4,7 @@
             "home": {
                 "title": "Activities",
                 "createLabel": "Create a new Activity",
-                "createOrEditLabel": "Create or edit a Activity"
+                "createOrEditLabel": "Edit a Activity"
             },
             "created": "A new Activity is created with identifier {{ param }}",
             "updated": "A Activity is updated with identifier {{ param }}",
