--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -8,17 +8,17 @@
             "entities": {
                 "main": "Entités",
                 "deliveryCoordinator": "Delivery Coordinator",
-                "administrator": "Administrator",
-                "team": "Team",
-                "project": "Project",
-                "projectType": "Project Type",
-                "collaborator": "Collaborator",
-                "activity": "Activity",
-                "correspondence": "Correspondence",
+                "administrator": "Administrateur",
+                "team": "Équipe",
+                "project": "Projet",
+                "projectType": "Type du projet",
+                "collaborator": "Collaborateur",
+                "activity": "Activité",
+                "correspondence": "Correspondance",
                 "imputation": "Imputation",
-                "imputationType": "Imputation Type",
-                "collaboratorMonthlyImputation": "Collaborator Monthly Imputation",
-                "collaboratorDailyImputation": "Collaborator Daily Imputation",
+                "imputationType": "Type d'mputation",
+                "collaboratorMonthlyImputation": "Imputation mensuelle du collaborateur",
+                "collaboratorDailyImputation": "Imputation quotidien du collaborateur",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
