render team of connected delco

--- a/src/main/webapp/i18n/en/team.json
+++ b/src/main/webapp/i18n/en/team.json
@@ -3,6 +3,7 @@
         "team": {
             "home": {
                 "title": "Teams",
+                "myTeam": "My Team",
                 "createLabel": "Create a new Team",
                 "createOrEditLabel": "Create or edit a Team"
             },
