--- a/src/main/webapp/i18n/fr/team.json
+++ b/src/main/webapp/i18n/fr/team.json
@@ -3,6 +3,7 @@
         "team": {
             "home": {
                 "title": "Équipes",
+                "myTeam": "Mon équipe",
                 "createLabel": "Créer une nouvelle équipe",
                 "createOrEditLabel": "Créer ou éditer une équipe"
             },
