--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -18,7 +18,10 @@
             "month": "Month",
             "year": "Year",
             "monthlyImputation": "Monthly Imputation",
-            "imputationType": "Imputation Type"
+            "imputationType": "Imputation Type",
+            "project_code": "Project code",
+            "debut_day": "Debut day",
+            "md_period": "Duration Man/day"
         }
     }
 }
