get APP imputations from the server and convert results

--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -2,7 +2,9 @@
     "imputationSqliApp": {
         "imputation": {
             "home": {
-                "title": "Imputations",
+                "appTitle": "APP Imputations",
+                "tbpTitle": "TBP Imputations",
+                "ppmcTitle": "PPMC Imputations",
                 "createLabel": "Create a new Imputation",
                 "createOrEditLabel": "Create or edit a Imputation"
             },
