--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -147,7 +147,8 @@
         "idexists": "Une nouvelle entité {{entityName}} ne peut pas avoir d'ID !",
         "idnull": "Invalid ID",
         "projectnull": "Vous devez sélectionner un projet!",
-        "datenull": "Les dates de debut et de fin ne peuvent pas être vides!"
+        "datenull": "Les dates de debut et de fin ne peuvent pas être vides!",
+        "orderdates": "Date fin doit être supérieur a Date début!"
     },
     "footer": "Ceci est votre pied de page"
 }
