--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -18,6 +18,7 @@
                 "title": "Imputation"
             },
             "month": "Month",
+            "monthNumber": "Month {{ month }}",
             "year": "Year",
             "monthlyImputation": "Monthly Imputation",
             "imputationType": "Imputation Type",
