--- a/src/main/webapp/i18n/fr/imputation.json
+++ b/src/main/webapp/i18n/fr/imputation.json
@@ -18,6 +18,7 @@
                 "title": "Imputation"
             },
             "month": "Mois",
+            "monthNumber": "Mois {{ month }}",
             "year": "Année",
             "monthlyImputation": "Imputation monsuelle",
             "imputationType": "Type d'imputation",
