APP imputations with manDay field in the Request

--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -19,6 +19,7 @@
             },
             "month": "Month",
             "year": "Year",
+            "manDay": "Duration in Man/Day",
             "monthlyImputation": "Monthly Imputation",
             "imputationType": "Imputation Type",
             "project_code": "Project code",
