--- a/src/main/webapp/i18n/fr/imputation.json
+++ b/src/main/webapp/i18n/fr/imputation.json
@@ -19,6 +19,7 @@
             },
             "month": "Mois",
             "year": "Année",
+            "manDay": "Durée en jour/homme",
             "monthlyImputation": "Imputation monsuelle",
             "imputationType": "Type d'imputation",
             "project_code": "Code projet",
