get imputations of requested manDay

--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -19,7 +19,9 @@
             },
             "month": "Month",
             "monthNumber": "Month {{ month }}",
+            "yearMonth": "Month {{ month }} / {{year}}",
             "year": "Year",
+            "startDay": "Start day",
             "manDay": "Duration in Man/Day",
             "monthlyImputation": "Monthly Imputation",
             "imputationType": "Imputation Type",
