--- a/src/main/webapp/i18n/fr/imputation.json
+++ b/src/main/webapp/i18n/fr/imputation.json
@@ -19,7 +19,9 @@
             },
             "month": "Mois",
             "monthNumber": "Mois {{ month }}",
+            "yearMonth": "Mois {{ month }} / {{year}}",
             "year": "Année",
+            "startDay": "Jour Départ",
             "manDay": "Durée en jour/homme",
             "monthlyImputation": "Imputation monsuelle",
             "imputationType": "Type d'imputation",
