--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -156,7 +156,8 @@
         "orderdates": "Date fin doit être supérieur a Date début!",
         "different_years": "Veuillez sélectionner les dates de la même année!",
         "extension_support": "Ce type de fichier n'est pas supporté, veuillez sélectionner une des extensions : 'xsl', 'xslx'",
-        "invalidPPMC": "Désolé, ce fichier n'est pas un fichier PPMC valide!"
+        "invalidPPMC": "Désolé, ce fichier n'est pas un fichier PPMC valide!",
+        "differentMonths": "Désolé, le mois sélectionné et celui du ficher doivent être les mêmes!"
     },
     "footer": "Ceci est votre pied de page"
 }
