create comparator app ppmc advanced component

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -28,6 +28,7 @@
                 "comparison": "Comparison",
                 "app-vs-tbp": "APP VS TBP",
                 "comparator-app-ppmc": "APP vs PPMC",
+                "comparator-app-ppmc-advanced": "APP vs PPMC - Advanced",
                 "compare": "compare"
             },
             "account": {
