--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -8,7 +8,8 @@
                 "APPvsTBP-title": "APP TBP Comparison",
                 "createLabel": "Create a new Imputation",
                 "createOrEditLabel": "Create or edit a Imputation",
-                "comparatorAppPpmcTitle": "Comparator APP-PPMC"
+                "comparatorAppPpmcTitle": "Comparator APP-PPMC",
+                "comparatorAppPpmcAdvancedTitle": "Advanced Comparator APP-PPMC"
             },
             "created": "A new Imputation is created with identifier {{ param }}",
             "updated": "A Imputation is updated with identifier {{ param }}",
