--- a/src/main/webapp/i18n/fr/imputation.json
+++ b/src/main/webapp/i18n/fr/imputation.json
@@ -8,7 +8,8 @@
                 "APPvsTBP-title": "APP TBP Comparaison",
                 "createLabel": "Créer un nouveau Imputation",
                 "createOrEditLabel": "Créer ou éditer un Imputation",
-                "comparatorAppPpmcTitle": "Comparateur APP-PPMC"
+                "comparatorAppPpmcTitle": "Comparateur APP-PPMC",
+                "comparatorAppPpmcAdvancedTitle": "Comparateur APP-PPMC détaillé"
             },
             "created": "Un nouveau Imputation a été créé avec l'identifiant {{ param }}",
             "updated": "Le Imputation avec l'identifiant {{ param }} a été mis à jour",
