resolve some translation problems

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -27,7 +27,7 @@
                 "importAPP": "Import APP",
                 "comparison": "Comparison",
                 "app-vs-tbp": "APP VS TBP",
-                "advanced-app-vs-tbp": "APP VS TBP Advanced",
+                "advanced-app-vs-tbp": "APP VS TBP - Advanced",
                 "comparator-app-ppmc": "APP vs PPMC",
                 "comparator-app-ppmc-advanced": "APP vs PPMC - Advanced",
                 "compare": "compare"
