--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -26,6 +26,7 @@
                 "importTBP": "Importer TBP",
                 "importAPP": "Importer APP",
                 "app-vs-tbp": "APP VS TBP",
+                "advanced-app-vs-tbp": "APP VS TBP - Détaillé",
                 "compare": "comparer",
                 "comparison": "Comparaison",
                 "comparator-app-ppmc": "APP vs PPMC",
