--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -161,5 +161,5 @@
         "invalidPPMC": "Désolé, ce fichier n'est pas un fichier PPMC valide!",
         "differentMonths": "Désolé, le mois sélectionné et celui du ficher doivent être les mêmes!"
     },
-    "footer": "Ceci est votre pied de page"
+    "footer": "©SQLI Group 2017 - Tous droits réservés"
 }
