adding email notification view

--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -34,7 +34,10 @@
             "end_date": "End date",
             "difference": "Difference",
             "collaborator": "Collaborator",
-            "total": "Total"
+            "total": "Total",
+            "notifyAll": "Notify All",
+            "notify": "Notify",
+            "action": "Action"
         }
     }
 }
