--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -19,3 +19,6 @@ email.reset.title=ImputationSqli Réinitialisation de mot de passe
 email.reset.greeting=Cher {0}
 email.reset.text1=Un nouveau mot de passe pour votre compte ImputationSqli a été demandé, veuillez cliquer sur le lien ci-dessous pour le réinitialiser :
 email.reset.text2=Cordialement,
+
+# Notification
+email.notification.title="Notification"
