--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -160,7 +160,8 @@
         "different_years": "Please select dates in the same year!",
         "extension_support": "This type of files is not supported, please use one of the following extensions : 'xsl', 'xslx'",
         "invalidPPMC": "Sorry, this File is not a valid PPMC file!",
-        "differentMonths": "Sorry, the selected month and the month of the file must be the same!"
+        "differentMonths": "Sorry, the selected month and the month of the file must be the same!",
+        "newUpload": "No PPMC history for these params, you should upload a new PPMC file."
     },
     "footer": "©SQLI Group 2017 - All rights reserved"
 }
